--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -697,6 +697,73 @@ input.inputLabelActive {
   background:url(../images/home_sprite.png) no-repeat 160px -109px #754613;
   }
 
+/*------Megamenu-------*/
+
+#portal-megamenu .megamenu-nav:hover > li:hover > a {
+  background-color: #663300;
+  color: #ffffcc;
+  }
+#theme-globalnav.megamenu-nav:hover li:hover > a {
+  -moz-border-radius: 0 0 6px 6px;
+  -webkit-border-radius: 0 0 6px 6px;
+  border-radius: 0 0 6px 6px;
+  }
+#theme-globalnav.megamenu-nav li.plus > a {
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  }
+#theme-globalnav.megamenu-nav .subs li a {
+  padding: 0;
+  }
+#portal-megamenu .subs a {
+  color: #332c34;
+  }
+#theme-globalnav.megamenu-nav .subs li .portletItem a {
+  color:#93a1bf !important;
+  text-decoration: underline;
+  }
+#theme-globalnav.megamenu-nav .subs li a {
+  background-color: transparent !important;
+  }
+#theme-globalnav.megamenu-nav .portletCalendar dt {
+  margin-bottom: 0;
+  } 
+#theme-globalnav.megamenu-nav li .portletCalendar a {
+  width: auto;
+  display: inline-block;
+  } 
+.ploneCalendar td {
+  border: 0;
+  }
+#theme-globalnav.megamenu-nav > li {
+  position: static;
+  }
+#theme-globalnav.megamenu-nav > li > .subs {
+  background-color: #fffff0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 15px 15px 20px;
+  left: 0;
+  border-bottom: 1px solid #fff;
+  }
+#portal-top .panels {
+  margin: 10px 0; 
+  }
+#portal-megamenu .megamenu-nav .subs .portletHeader  a,
+.megamenu-nav .portletHeader,
+.megamenu-nav .portletHeader a {
+  background-color: #663300;
+  color: #ffffcc;
+  }
+#theme-globalnav > li {
+  white-space: normal;
+  }
+#theme-globalnav:hover li:hover .subs a {
+  background-color: transparent;
+  }
+
 /*---------- PORTAL PERSONAL TOOLS ----------*/
 #portal-personaltools-wrapper {
   bottom:0;
@@ -2269,6 +2336,131 @@ dl.collapsedInlineCollapsible dt.collapsibleHeader {
   padding:0;
   }
 
+/* owl-carousel */
+
+.portletContentSlider .slider-wrapper .itemBody,
+.bx-wrapper .itemBody,
+.portletOWLCarousel .portletHeader {
+  display: none;
+  }
+.portletOWLCarousel .item {
+  padding: 0 1em; 
+  }
+.ng-collection-buttons button:hover {
+  background-color: transparent;
+  color: #663300;
+  opacity: 1;
+  }
+.itemTitle {
+  font: 14px/17px Tahoma,Geneva,sans-serif;
+  }
+.portletOWLCarousel .itemTitle {
+  font: 18px/28px Tahoma,Geneva,sans-serif;
+  }
+.slider-wrapper .item,
+.slider-wrapper-outer {
+  margin: 0 0 12px;
+  }
+.pager-item {
+  margin-right: 12px;
+  }
+.owl-theme .owl-controls .owl-page span {
+  background-color: #663300;
+  opacity: 0.5;
+  }
+.owl-theme .owl-controls .owl-page.active span, 
+.owl-theme .owl-controls.clickable .owl-page:hover span {
+  background-color: #663300;
+  opacity: 1;
+  }
+.ng-collection-buttons button {
+  display: inline-block;
+  background-color: transparent;
+  overflow: hidden;
+  font-size: 1.5em;
+  text-indent: -73px;
+  margin: 0;
+  color: #663300;
+  padding: 2px 19px;
+  font-family: Tahoma, Geneva, sans-serif;
+  font-weight: bold;
+  opacity: 0.5;
+  }
+.portletCalendar dt,
+.ploneCalendar td:hover,
+.ploneCalendar td.today {
+  background-color: #663300;
+  }
+.ploneCalendar td.today,
+.ploneCalendar td {
+  border: 0;
+  }
+.ng-collection-buttons button.qg-next {
+  text-indent: -74px;
+  }
+.ng-collection-buttons button.qg-prev:after {
+  content: "«";
+  }
+.ng-collection-buttons button.qg-next:after {
+  content: "»";
+  }
+.portletQgCarousel,
+.portletOWLCarousel,
+.portletShelf {
+  position: relative; 
+  }
+.portletQgCarousel .portletFooter,
+.portletOWLCarousel .portletFooter,
+.portletShelf .portletFooter {
+  position: absolute;
+  right: 0;
+  bottom: 22px;
+  }
+.portletQgCarousel .portletFooter {
+  bottom:21px;
+  }
+.portletQgCarousel a.item-visual {
+  text-decoration: none;
+  }
+#portal-top {
+  z-index: 9;
+  }
+.resp-tabs-container a,
+.owl-carousel a {
+  text-decoration: none !important;
+  }
+#content ul.resp-tabs-list li {
+  background: none;
+  }
+.resp-vtabs li.resp-tab-active {
+  border-right: 1px solid #fff;
+  }
+.owl-buttons {
+  display: none;
+  }
+#theme-globalnav li ul.resp-tabs-list {
+  width: 100%;
+  background: none;
+  }
+#theme-globalnav li .resp-vtabs ul.resp-tabs-list {
+  width: 30%;
+  }
+.portletItem .documentDescription, 
+#content .panels .documentDescription {
+  font-family: Tahoma, Geneva, sans-serif;
+  font-size: 12px;
+  line-height: 18px;
+  }
+#content ul.resp-tabs-list li.resp-tab-item.resp-tab-active {
+  background: #fff;
+  }
+.tabContainer {
+  float: none;
+  display: inline-block !important;
+  }
+#theme-globalnav ul.resp-tabs-list li {
+  padding-right: 15px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -2288,12 +2480,17 @@ div.cell {
   background-position:0 72px;
   text-align:center;
   }
+.panels div.cell {
+  left: 0;
+  }
 #portal-logo {
   display:block;
   margin:0.5em;
   }
 #portal-logo img {
   margin:0;
+  max-width: 100%;
+  height: auto;
   }
 #portal-slogan {
   display:block;
@@ -2378,7 +2575,7 @@ div.cell {
 #portal-column-content .cell,
 #portal-column-one,
 #portal-column-two {
-  width:auto !important;
+  width: 100% !important;
   }
 #portal-footer,
 #portal-colophon {
@@ -2403,7 +2600,81 @@ div.cell {
   margin-right:0;
   width:100%;
   }
+/*------megamenu------*/
 
+#portal-top .panels div.width-1\3a 2 {
+  width: 100%;
+  }
+.megamenu .navbar-toggle {
+  background-color: #ffffcc;
+  min-height: 50px;
+  }
+#theme-globalnav.megamenu-nav li,
+#theme-globalnav.megamenu-nav li .subs {
+  width: 100%;
+  margin: 0;
+  }
+#theme-globalnav.megamenu-nav > li > .subs {
+  padding-bottom: 15px;
+  }
+#theme-globalnav.megamenu-nav li > a {
+  -webki-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 15px 0 15px 30px;
+  font-size: 14px;
+  width: 100%;
+  }
+#theme-globalnav.megamenu-nav:hover li:hover > a {
+  border-radius: 0;
+  }
+#theme-globalnav.megamenu-nav li:hover > a {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  }
+#portal-megamenu .plus.open > a,
+#portal-megamenu .megamenu-nav:hover > li:hover > a,
+#theme-globalnav ul li.open > a {
+  background-color: #663300;
+  }
+#theme-globalnav.megamenu ul li {
+  clear: both;
+  padding: 0;
+  }
+button.navbar-toggle {
+  border: 0;
+  }
+.megamenu .navbar-toggle .icon-bar {
+  height: 3px;
+  background-color: #663300;
+  }
+.megamenu.open .navbar-toggle .icon-bar {
+  background-color: #ffffcc;
+  }
+.megamenu.open .navbar-toggle, 
+.megamenu .navbar-toggle:hover,
+.navbar-toggle:focus {
+  background: #663300;
+  }
+.megamenu-nav .plus.open > a:after,
+.megamenu-nav .plus > a:after {
+  content: "›";
+  font-size: 24px;
+  right: 30px;
+  top:8px;
+  }
+.megamenu-nav .plus > a:after {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  transform: rotate(90deg);
+  }
+.megamenu-nav .plus.open > a:after {
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+  right: 34px;
+  }
 }
 
 @media screen and (max-width:480px) {
