--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -740,13 +740,23 @@ input.inputLabelActive {
   position: static;
   }
 #theme-globalnav.megamenu-nav > li > .subs {
-  background-color: #fffff0;
+  background-color: #ffffcc;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 15px 15px 20px;
   left: 0;
-  border-bottom: 1px solid #fff;
+  border-bottom: 3px solid #663300;
+  }
+#theme-globalnav.megamenu-nav > li > .subs .portlet {
+  background-color: #F6F3BE;
+  }
+#viewlet-above-content-body ~ #content-core {
+  padding-top: 15px;
+  clear: both;
+  }
+.portletCalendar dt {
+  font-weight: normal;
   }
 #portal-top .panels {
   margin: 10px 0; 
@@ -2352,10 +2362,15 @@ dl.collapsedInlineCollapsible dt.collapsibleHeader {
   opacity: 1;
   }
 .itemTitle {
+  font-weight: bold !important;
   font: 14px/17px Tahoma,Geneva,sans-serif;
   }
 .portletOWLCarousel .itemTitle {
   font: 18px/28px Tahoma,Geneva,sans-serif;
+  font-weight: normal !important;
+  }
+.pae_calendar_tooltip a:hover {
+  color: #cc9966;
   }
 .slider-wrapper .item,
 .slider-wrapper-outer {
@@ -2363,6 +2378,16 @@ dl.collapsedInlineCollapsible dt.collapsibleHeader {
   }
 .pager-item {
   margin-right: 12px;
+  }
+.qg-item .item-visual {
+  margin: 0 0 1em 12px;
+  }
+.qg-item.active .image-block {
+  margin-right: 12px;
+  margin-bottom: 16px;
+  }
+.portletOWLCarousel .item, .portletShelf .item {
+  padding: 0 6px;
   }
 .owl-theme .owl-controls .owl-page span {
   background-color: #663300;
@@ -2398,12 +2423,19 @@ dl.collapsedInlineCollapsible dt.collapsibleHeader {
 .ng-collection-buttons button.qg-next {
   text-indent: -74px;
   }
-.ng-collection-buttons button.qg-prev:after {
+.ng-collection-buttons button.qg-prev:after,
+.ng-collection-buttons button.bx-prev:after {
   content: "«";
   }
-.ng-collection-buttons button.qg-next:after {
+.ng-collection-buttons button.qg-next:after,
+.ng-collection-buttons button.bx-next:after {
   content: "»";
   }
+.portletContentSlider .ng-collection-buttons button {
+  text-indent: -43px;
+  margin: 10px;
+  padding: 0.3em 0 0.4em;
+  } 
 .portletQgCarousel,
 .portletOWLCarousel,
 .portletShelf {
