Replaced top images

--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -10,7 +10,7 @@ body {
   border-top: 3px solid #663300;
   }
 #content-header {
-  background: #28293c url(../images/sun_topbg.png) no-repeat 0 0;
+  background: #28293c url(../images/sun_topbg.jpg) no-repeat 0 0;
   background-size: cover;
   min-height: 104px;
   position: relative;
