--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -9,7 +9,7 @@ body {
   background-color: #f0f2f2;
   }
 #content-header {
-  background: #28293c url(../images/rain_topbg.png) no-repeat 0 0;
+  background: #28293c url(../images/rain_topbg.jpg) no-repeat 0 0;
   background-size: cover;
   min-height: 104px;
   position: relative;
