--- a/quintagroup/theme/sunrain/static/css/sun.css
+++ b/quintagroup/theme/sunrain/static/css/sun.css
@@ -204,11 +204,11 @@ body.plone-toolbar-top-default {
   float: right;
   clear: none;
   background: #60323B;
-  bottom: -24px;
+  bottom: -33px;
   position: absolute;
   right: 0;
   margin: 0;
-  z-index: 999;
+  z-index: 9;
   }
 #portal-header #portal-languageselector li {
   margin: 0 10px 5px;
@@ -797,5 +797,16 @@ body.plone-toolbar-left-default {
   margin: 15px auto;
   display: block;
   text-align: center;
+  }
+#portal-header #portal-languageselector {
+  float: none;
+  background: #FF6046;
+  bottom: 0;
+  position: relative;
+  right: 0;
+  margin: 0;
+  z-index: 999;
+  margin: 15px auto 0;
+  display: block;
   }
 }
