--- a/quintagroup/theme/sunrain/static/css/rain.css
+++ b/quintagroup/theme/sunrain/static/css/rain.css
@@ -176,14 +176,13 @@ body.plone-toolbar-top-default {
   width: 370px;
   }
 #portal-header #portal-languageselector {
-  float: right;
-  clear: none;
   background: #FF6046;
-  bottom: -33px;
-  position: absolute;
+  position: relative;
   right: 0;
-  margin: 0;
+  margin: 9px 0 0 0;
   z-index: 999;
+  right: 0;
+  clear: both;
   }
 #portal-header #portal-languageselector li {
   margin: 0 10px 5px;
@@ -198,11 +197,10 @@ body.plone-toolbar-top-default {
   position: relative;
   }
 #portal-header #portal-searchbox {
-  position: absolute;
+  position: relative;
   clear: none;
-  float: none;
+  float: right;
   right: 0;
-  margin: -11px 0 0;
   width: 220px;
   padding: 0;
   }
@@ -219,7 +217,8 @@ body.plone-toolbar-top-default {
 #portal-header #portal-searchbox [type="submit"] {
   background: none;
   border: 0;
-  position: absolute;
+  float: right;
+  position: relative;
   width: 15px;  
   text-indent: -99999px;
   }
@@ -716,6 +715,7 @@ button:hover, .standalone:focus, .context:focus,
   width: 250px;
   margin: 0 auto;
   clear: both;
+  float: none;
   }
 #portal-header #portal-anontools {
   margin-top: 10px;
@@ -794,7 +794,6 @@ body.plone-toolbar-left-default {
   position: relative;
   right: 0;
   margin: 0;
-  z-index: 999;
   margin: 15px auto 0;
   display: block;
   }
